# claude-code-python-template

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup_project.py
.claude/: settings.json  settings.local.json  settings.local.json.example
.claude/agent-catalog/: manifest.json
.claude/agent-catalog/academic/: academic-anthropologist.md  academic-geographer.md  academic-historian.md  academic-narratologist.md  academic-psychologist.md
.claude/agent-catalog/design/: design-brand-guardian.md  design-image-prompt-engineer.md  design-inclusive-visuals-specialist.md  design-ui-designer.md  design-ux-architect.md  design-ux-researcher.md  design-visual-storyteller.md  design-whimsy-injector.md
.claude/agent-catalog/product/: product-manager.md  (+4 more)
.claude/agents/: acceptance-criteria-validator.md  agent-auditor.md  code-quality-validator.md  code-reviewer.md  docs-updater.md  implementation-tracker.md  output-evaluator.md  pr-writer.md  refactoring-specialist.md  review-responder.md  security-auditor.md  test-coverage-validator.md
.claude/commands/: catchup.md  cove-isolated.md  cove.md  security-audit.md  ship.md
.claude/hooks/: auto-format.sh  dangerous-actions-blocker.sh  devcontainer-policy-blocker.sh  output-secrets-scanner.sh  test-on-change.sh  unicode-injection-scanner.sh
.claude/rules/: architecture-review.md  code-quality-review.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.devcontainer/permissions/: tier1-assisted.json  tier2-autonomous.json  tier3-full-trust.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: claude-code-review.yml  publish.yml  template-integration.yml  template-sync.yml  tests.yml
apps/server/: Dockerfile  pyproject.toml
apps/server/tests/: __init__.py
apps/server/{{namespace}}/server/: __init__.py
docs/: ARCHITECTURE_GUIDE.md  CHANGELOG.md  DECISIONS.md  DEVCONTAINER_PERMISSIONS.md  DEVCONTAINER_PERMISSION_TIERS_PLAN.md  DEVELOPMENT_PROCESS.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  WORKFLOW_SKILLS_PLAN.md
docs/community/: GROWTH_PLAN.md  README_DRAFT.md  claude.md  gemini.md  openai.md
libs/core/: pyproject.toml
libs/core/tests/: __init__.py
libs/core/{{namespace}}/core/: __init__.py
scripts/: check_versions.py  convert_agents.py  test_template_integration.sh  validate_agents.py
tests/: test_agent_catalog.py  test_agents.py  test_commands.py  test_hooks.py  test_permissions.py  test_setup_project.py  test_skills.py
(+146 files in other folders)
