[project]
name = "{{project_name}}-server"
version = "0.1.0"
description = "{{description}} - Server application"
requires-python = ">=3.11,<3.13"
dependencies = [
    "{{project_name}}-core",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.uv.sources]
"{{project_name}}-core" = { workspace = true }

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "../.."
venv = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{namespace}}"]
